--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       margin: 0;
     }
     .container {
-      background: #50a767;
+      background: transparent;
       color: #fff;
       padding: 40px;
       border-radius: 15px;
@@ -49,9 +49,20 @@
 <body>
 
   <div class="container">
-    <h1>Coming Soon</h1>
-    <p>Our website is under construction. We'll be here soon with our new awesome site.</p>
-    <p>Drop your work email to get notified</p>
+    <h1>Mission Patent Monetization - Platform & Ecosystem</h1>
+    <br>
+
+    </br>
+    
+    <h2>To help innovators and patent holders commercialise & monetize their patents</h2></li>
+    <h2>To increase awareness for industries, corporates, SMEs and start-ups about promising patents available for adoption</h2>
+    <h2>To help India achieve a scale of 50x in terms of IP export value!</h2>
+    <h2>And we are just getting started!</h2>
+    <br>
+    <h2>Drop your work email (in the box below) to get notified and updated</h2>
+  
+    <br>
+    <br>
     <input type="email" id="emailInput" placeholder="you@company.com" />
     <button onclick="saveEmail()">Notify Me</button>
   </div>
