--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <body>
 
   <div class="container">
-    <h1>Mission Patent Monetization - Platform & Ecosystem</h1>
+    <!-- <h1>Mission Patent Monetization - Platform & Ecosystem</h1>
     <br>
 
     </br>
@@ -61,9 +61,10 @@
     <br>
     <h2>Drop your work email (in the box below) to get notified and updated</h2>
   
+    <br> -->
+    <img src="./logo.png" alt="Patent Partners Logo" style="width: 420px; height: auto; margin-bottom: 20px;" />
     <br>
-    <br>
-    <input type="email" id="emailInput" placeholder="you@company.com" />
+    <input type="email" id="emailInput" placeholder="you@yourcompany.com" />
     <button onclick="saveEmail()">Notify Me</button>
   </div>
 
