--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <br> -->
     <img src="./logo.png" alt="Patent Partners Logo" style="width: 420px; height: auto; margin-bottom: 20px;" />
     <br>
-    <input type="email" id="emailInput" placeholder="you@companyname.com" />
+    <input type="email" id="emailInput" placeholder="you@yourcompany.com" />
     <button onclick="saveEmail()">Notify Me</button>
   </div>
 
