--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <h2>Drop your work email (in the box below) to get notified and updated</h2>
   
     <br> -->
-    <img src="./logo.png" alt="Patent Partners Logo" style="width: 420px; height: auto; margin-bottom: 20px;" />
+    <img src="./Mission Patent.png" alt="Patent Partners Logo" style="width: 420px; height: auto; margin-bottom: 20px;" />
     <br>
     <input type="email" id="emailInput" placeholder="you@yourcompany.com" />
     <button onclick="saveEmail()">Notify Me</button>
