--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
   <h2>Contact Us</h2>
   <div class="company-contact-details">
     <div class="company-detail-item">
-      <strong>Company:</strong> Nanosafe Solutions Pvt. Ltd.
+      <strong>Company:</strong> Patent Partners / Nanosafe Solutions Pvt. Ltd.
     </div>
     <div class="company-detail-item">
       <strong>Address:</strong> 506 A , DPSRU Innovation and Incubation Foundation. Pushp Vihar, Mehrauli - Badarpur Rd, opp. Sainik Farm, Sector 3, Tughlakabad, New Delhi, Delhi 110017, India
