Updated meta tags

--- a/index.html
+++ b/index.html
@@ -2,25 +2,26 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Patent Partners | Early Onboard - Nanosafe Solutions</title>
+  <title>Patent Partners | Early Onboard</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
   <!-- SEO Meta Tags -->
-  <meta name="description" content="Join Patent Partners by Nanosafe Solutions. Be among the first to get on board with our innovative patent services. No marketing gimmicks - just quality patent solutions.">
+  <meta name="description" content="Join Patent Partners by Nanosafe Solutions. Be among the first to get on board with our innovative patent commercialisation. No marketing gimmicks - just quality patents.">
   <meta name="keywords" content="patent partners, patent services, nanosafe solutions, patent filing, intellectual property, innovation, patent consultation">
   <meta name="author" content="Nanosafe Solutions Pvt. Ltd.">
   <meta name="robots" content="index, follow">
   
   <!-- Open Graph Meta Tags for Social Sharing -->
-  <meta property="og:title" content="Patent Partners | Early Onboard - Nanosafe Solutions">
+  <meta property="og:title" content="Patent Partners | Early Onboard">
   <meta property="og:description" content="Join Patent Partners by Nanosafe Solutions. Be among the first to get on board with our innovative patent services.">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://yourdomain.com">
-  <meta property="og:image" content="https://yourdomain.com/logo.png">
+  <meta property="og:url" content="https://www.patentpartners.in">
+  <meta property="og:site_name" content="Patent Partners">
+  <meta property="og:image" content="https://www.patentpartners.in/logo.png">
   
   <!-- Twitter Card Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Patent Partners | Early Onboard - Nanosafe Solutions">
+  <meta name="twitter:title" content="Patent Partners | Early Onboard">
   <meta name="twitter:description" content="Join Patent Partners by Nanosafe Solutions. Be among the first to get on board with our innovative patent services.">
   <meta name="twitter:image" content="https://yourdomain.com/logo.png">
   
