added google console meta tag

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <title>Patent Partners | Early Onboard</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
+<meta name="google-site-verification" content="mZrRJTcpWDpDPx8ad7t7aww8dUQyyn6GXy2-Ukm_Fmo" />
+
   <!-- SEO Meta Tags -->
   <meta name="description" content="Join Patent Partners by Nanosafe Solutions. Be among the first to get on board with our innovative patent commercialisation. No marketing gimmicks - just quality patents.">
   <meta name="keywords" content="patent partners, patent services, nanosafe solutions, patent filing, intellectual property, innovation, patent consultation">
